link cell added

--- a/contenedores.ipynb
+++ b/contenedores.ipynb
@@ -466,6 +466,19 @@
       "metadata": {
         "trusted": true
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Aquí tienes el <a href=\"https://drive.google.com/file/d/1MBseqCbC7k11l8QB7UHTzJQFT3mLGbJh/view\">enlace</a> al archivo con el código completo."
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
     }
   ],
   "metadata": {
