--- a/vector.ipynb
+++ b/vector.ipynb
@@ -123,7 +123,7 @@
       "cell_type": "code",
       "source": [
         "numeros.push_back(33);\n",
-        "numeros.push back(55);\n",
+        "numeros.push_back(55);\n",
         "numeros.push_back(77);\n",
         "\n",
         "cadenas.push_back(\"Hola \");\n",
@@ -363,7 +363,7 @@
       "source": [
         "cout <<\"numeros tiene \" <<numeros.size() <<\" datos\" <<endl;\n",
         "numeros.pop_back();\n",
-        "cout <<\"Después de eliminar el último tiene \" <<numeros.size() <<<\" datos\" <<endl;"
+        "cout <<\"Después de eliminar el último tiene \" <<numeros.size() <<\" datos\" <<endl;"
       ],
       "outputs": [],
       "execution_count": null,
