enlace a código fuente agregado.

--- a/clase_administradora.ipynb
+++ b/clase_administradora.ipynb
@@ -755,9 +755,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "En <a href=\"https://drive.google.com/file/d/1dLzO6h1IHIrh5TVHpbl3SOiAUi-aaua4/view?usp=sharing\">este enlace</a> se encuentra el código para la clase Song. Algo que no se mencionó previamente es el hecho que en C++ las clases suelen separarse en dos archivos distintos, uno con extensión **.h** y otro con extensión **.cpp**.\n",
-        "\n",
-        "En el archivo **.h** se encuentra la declaración de la clase y en el archivo **.cpp** vamos a implementar todos los métodos y funciones de la clase."
+        "<a href=\"https://drive.google.com/file/d/1gCKwmemIuIGRmVx6Bjqv5SnXV1vW-2hK/view?usp=sharing\">Aquí</a> Puedes encontrar el código correspondiente a este notebook."
       ],
       "metadata": {
         "nteract": {
