lista errores corregidos.

--- a/list.ipynb
+++ b/list.ipynb
@@ -68,7 +68,7 @@
       "cell_type": "code",
       "source": [
         "#include <iostream>\n",
-        "//Necesitamos incluir la biblioteca vector\n",
+        "//Necesitamos incluir la biblioteca list\n",
         "#include <list>\n",
         "\n",
         "using namespace std;\n",
@@ -156,7 +156,7 @@
         "}\n",
         "else\n",
         "{\n",
-        "  cout <<\"La lista de números no está vacía\" <<endl <<endl\n",
+        "  cout <<\"La lista de números no está vacía\" <<endl <<endl;\n",
         "}\n",
         "\n",
         "cout <<\"El tamaño de la lista de cadenas es \" <<cadenas.size() <<endl <<endl;"
@@ -364,7 +364,7 @@
         "cout <<\"numeros tiene \" <<numeros.size() <<\" datos\" <<endl;\n",
         "numeros.pop_front();\n",
         "numeros.pop_back();\n",
-        "cout <<\"Después de eliminar el último tiene \" <<numeros.size() <<\" datos\" <<endl;"
+        "cout <<\"Después de eliminar el primero y último tiene \" <<numeros.size() <<\" datos\" <<endl;"
       ],
       "outputs": [],
       "execution_count": null,
