pila y cola errores corregidos.

--- a/queue.ipynb
+++ b/queue.ipynb
@@ -108,7 +108,7 @@
       "cell_type": "code",
       "source": [
         "reales.push(3.141592);\n",
-        "reales.push_front(9.81);\n",
+        "reales.push(9.81);\n",
         "\n",
         "simbolos.push('A');\n",
         "simbolos.push('B');\n",
@@ -270,7 +270,7 @@
         "}\n",
         "if (simbolos.empty())\n",
         "{\n",
-        "  cout <<\"La cola de símbolos está vacía\" <<endl <<endl;\n",
+        "  cout <<endl <<\"La cola de símbolos está vacía\" <<endl <<endl;\n",
         "}"
       ],
       "outputs": [],
