--- a/stack.ipynb
+++ b/stack.ipynb
@@ -108,7 +108,7 @@
       "cell_type": "code",
       "source": [
         "reales.push(3.141592);\n",
-        "reales.push_front(9.81);\n",
+        "reales.push(9.81);\n",
         "\n",
         "simbolos.push('N');\n",
         "simbolos.push('L');\n",
@@ -268,7 +268,7 @@
         "}\n",
         "if (simbolos.empty())\n",
         "{\n",
-        "  cout <<\"La pila de símbolos está vacía\" <<endl <<endl;\n",
+        "  cout <<endl <<\"La pila de símbolos está vacía\" <<endl <<endl;\n",
         "}"
       ],
       "outputs": [],
